IGNITE-14145 ConfigurationUtil moved to other package; Named lists enhancements; minor refactoring. (#51)